create artist template and image folder

--- a/artists.html
+++ b/artists.html
@@ -60,7 +60,7 @@
     <div class="more">
        Contemporary with a classical twist. Popular on soundtracks. Very refined and elegantly soulful music. 
     </div>
-    <button class="card-btn"> BIOGRAPHY</button>
+    <button class="card-btn"> <a href="agnesobel.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic1"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/1rKrEdI6GKirxWHxIUPYms?si=__7lNlNyQc26_H9UvvsO9w" target="_blank">Listen on Spotify</a>
