--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="col-12 col-md-8 intro-text">
-          <h1 class="header1">This is Ice<b>flow</b></h1>
+          <h1 class="header1">What is Ice<b>flow</b></h1>
           <p>
             The Ice Flow project aimed at introducing the singers and
             songwriters of the Nordic Region to the rest of the world. We hope
