save readme and wireframe to git

--- a/agnesobel.html
+++ b/agnesobel.html
@@ -118,8 +118,8 @@
           </div>
          
           <div class="col-12 media-box2">
-                 <div class="spot">
-                    <iframe class="spotify"
+                 <div class="spotify">
+                    <iframe class="spotify-responsive"
                 src="https://open.spotify.com/embed/artist/1rKrEdI6GKirxWHxIUPYms"
                 width="300"
                 height="380"
