create anebrun.html and completed

--- a/anebrun.html
+++ b/anebrun.html
@@ -51,21 +51,14 @@
         <div class="row">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="../assets/img/agnes_obel1a.png" alt="Agnes Obel" />
+            <img src="../assets/img/ane_brun2.png" alt="Ane Brun" />
           </div>
         </div>
 
         <div class="col-12 col-sm-8 intro-text">
-          <h1 class="header1">Agnes <b>Obel</b></h1>
+          <h1 class="header1">Ane <b>Brun</b></h1>
           <p>
-            Agnes Caroline Thaarup Obel (born 28 October 1980) is a Danish
-            singer, songwriter, and musician. Her first album, Philharmonics,
-            was released by PIAS Recordings on 4 October 2010 and was certified
-            gold in June 2011 by the Belgian Entertainment Association (BEA)
-            after selling 10,000 Copies. At the Danish Music Awards in November
-            2011, Obel won five prizes, including Best Album and Best Debut
-            Artist. Citizen of Glass, her third album, received the IMPALA Album
-            of the Year Award 2016.
+            Ane Brun; born Ane Brunvoll on 10 March 1976 in Molde, Norway) is a Norwegian songwriter, guitarist, and vocalist of Sami origin.Since 2003 she has recorded eight albums, six of which are studio albums (including a collection of duets) and one live DVD. She has lived in Stockholm, Sweden, since 2001, where she writes, records, and runs her own label (Balloon Ranger Recordings).Brun featured as one of the guests on Peter Gabriel's 2011 studio album New Blood, singing Kate Bush's part on the re-recorded version of "Don't Give Up", recorded in 2010. She was subsequently invited to perform with him as support act and back-up singer on the New Blood tour throughout 2010.
           </p>
         </div>
       </div>
@@ -77,20 +70,20 @@
 
           <ul>
             <li>
-              <a href="https://music.apple.com/ie/album/myopia/1483221211"
-                >Agnes Obel : Myopia</a
+              <a href="https://music.apple.com/us/album/a-temporary-dive/1444039380"
+                >Ane Brun: A Temporary Dive</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/ie/album/citizen-of-glass/1132114456"
-                >Agnes Obel: Citizen of Glass</a
+                href="https://music.apple.com/us/album/after-the-great-storm/1536058335"
+                >Ane Brun: After The Great Storm</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/ie/album/philharmonics-deluxe-edition/431226423"
-                >Agnes Obel: Philharmonics
+                href="https://music.apple.com/us/album/how-beauty-holds-the-hand-of-sorrow/1540218244"
+                >Ane Brun:: How Beauty Holds the hand of Sorrow
               </a>
             </li>
           </ul>
@@ -108,11 +101,8 @@
             <iframe class="youtube-responsive"
               width="675"
               height="380"
-              src="https://www.youtube.com/embed/32kYH6XZrIo"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+              src="https://www.youtube.com/embed/KVqu87-amDA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
          </div>
          </div>
           </div>
@@ -120,13 +110,7 @@
           <div class="col-12 media-box2">
                  <div class="spotify">
                     <iframe class="spotify-responsive"
-                src="https://open.spotify.com/embed/artist/1rKrEdI6GKirxWHxIUPYms"
-                width="300"
-                height="380"
-                frameborder="0"
-                allowtransparency="true"
-                allow="encrypted-media"
-              ></iframe>
+                src="https://open.spotify.com/embed/artist/2L3kwZFd16zjHz9a5kEPAm" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
          </div>
           </div>
           
@@ -141,20 +125,20 @@
         <div class="col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="https://www.facebook.com/agnesobelofficial" target="_blank"
+                <a class="facebook" href="https://www.facebook.com/anebrunofficial" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="https://twitter.com/agnesobel" target="_blank"
-                  ><i class="fab fa-twitter-square"></i
-                ></a>
+                <a class="twitter" href="https://www.imdb.com/name/nm2080795/?ref_=fn_al_nm_1" target="_blank"
+                  ><i class="fab fa-imdb"></i>            
+                  </a>
               </li>
               <li>
-                <a class="imdb" href="https://www.imdb.com/name/nm1425679/?ref_=fn_al_nm_1" target="_blank"><i class="fab fa-imdb"></i></a>
+                <a class="imdb" href="https://www.youtube.com/channel/UChihnFNbUit9rhVXCNeTsrQ" target="_blank"><i class="fab fa-youtube-square"></i></a>
               </li>
               <li>
-                <a class="instagram" href="https://agnesobel.ffm.to/instagram" target="_blank"
+                <a class="instagram" href="https://instagram.com/anebrun/" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
@@ -173,8 +157,8 @@
               <h3>The live schedule is subject to change</h3>
               <span
                 ><a
-                  href="https://www.ticketmaster.com/agnes-obel-tickets/artist/1554150" target="_blank"
-                  >To see if Agnes is playing near you soon, check this
+                  href="https://www.ticketmaster.ie/ane-brun-tickets/artist/1046986" target="_blank"
+                  >To see if Ane is playing near you soon, check this
                   Ticketmaster link</a
                 ></span
               >
