--- a/artists.html
+++ b/artists.html
@@ -75,7 +75,7 @@
     <div class="more">
         Contemporary and Consistent with a unique singing tone. Loved especially by her peers, popular for duets including Peter Gabriel.
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+    <button class="card-btn"> <a href="anebrun.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic2"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/2L3kwZFd16zjHz9a5kEPAm?si=bRWuxKuAQIewwArfChiPFQ" target="_blank">Listen on Spotify</a>
