--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 
     <div class="row">
-      <div class="col-12 col-md-4 intro-pic">
+      <div class="col-12 col-md-4 intro-pic2">
         <img src="../assets/img/guitars3.jpg" alt="New Music" />
       </div>
       <div class="col-12 col-md-8 intro-text">
@@ -111,14 +111,14 @@
           <span
             ><a
               href="https://open.spotify.com/album/7cvGvQ4o2mWFLMfyqhLtT2?si=Z10sxKxnSfyUFnf9fUJZVA"
-              >Ane Brun: How beauty holds the hand of sorrow (new album)</a
+              ><b>Ane Brun</b>: How beauty holds the hand of sorrow (new album)</a
             ></span
           >
           <br />
           <span
             ><a
               href="https://open.spotify.com/album/5nJL2xXv0eeVunrbsOPhC7?si=aWUQmRSFTzqAluI-9A87xA"
-              >El Perro Del Mar: Life is full of rewards (new single)</a
+              ><b>El Perro Del Mar</b>: Life is full of rewards (new single)</a
             ></span
           >
         </div>
