change color scheme, update footer year info

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,8 @@
 
 <div class="form-box">
 <form class="form-style">
-    <h3>- Contact -</h3>
+    <h3>Sing Out! </h3>
+    <p>We'd love to hear your suggestions for new artists to feature</p>
    
     <div class="inputbox">
     <input type="text" name="" required="required">
@@ -139,7 +140,7 @@
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">
-              Copyright &copy; 2017 All Rights Reserved by
+              Copyright &copy; 2020 All Rights Reserved by
               <a href="#">ICE flow</a>.
             </p>
           </div>
