--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </head>
 
   <body>
-    <div>
-      <nav>
+    <div class="nav-container">
+      <nav >
         <input id="nav" type="checkbox" class="hidden" />
         <label for="nav" class="nav-btn">
           <i></i>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="container main-outer">
-      <div class="row ">
+      <div class="row row-1">
         <div class="col-12 col-md-4">
           <div class="intro-pic">
             <img src="../assets/img/fever_ray.jpg" alt="Fever Ray" />
@@ -71,7 +71,7 @@
       </div>
     
 
-    <div class="row ">
+    <div class="row row-2">
       <div class="col-12 col-md-8 intro-text">
         <h1 class="header1">Concert<b>News</b></h1>
         <h4>All Tour Dates are subject to change due to COVID19</h4>
@@ -88,7 +88,7 @@
           </li>
           <li>
             <a href="https://www.ticketmaster.com/"
-              >More Concert updates as we receive them</a
+              >* More Concert updates as we receive them</a
             >
           </li>
         </ul>
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row row-3">
       <div class="col-12 col-md-4 intro-pic2">
         <img src="../assets/img/guitars3.jpg" alt="New Music" />
       </div>
@@ -176,7 +176,7 @@
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">
-              Copyright &copy; 2017 All Rights Reserved by
+              Copyright &copy; 2020 All Rights Reserved by
               <a href="#">ICE flow</a>.
             </p>
           </div>
