--- a/about.html
+++ b/about.html
@@ -120,8 +120,8 @@
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">
-              Copyright &copy; 2017 All Rights Reserved by
-              <a href="#">ICE flow</a>.
+              Copyright &copy; 2020 All Rights Reserved by
+              <a href="index.html">ICE flow</a>.
             </p>
           </div>
 
