update text box colors in about & index

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
       </div>
     </div>
 
-    <div class="row row-3">
+    <div class="row row-1">
       <div class="col-12 col-md-4 intro-pic2">
         <img src="../assets/img/guitars3.jpg" alt="New Music" />
       </div>
-      <div class="col-12 col-md-8 intro-text">
+      <div class="col-12 col-md-8 intro-text2">
         <div>
           <h1>New<b>Music</b></h1>
           <span
