--- a/about.html
+++ b/about.html
@@ -54,16 +54,19 @@
         </div>
 
         <div class="col-12 col-lg-7 intro-text">
+            <div class="abt-text">
           <h1 class="header1">About<b>Artists</b></h1>
-          <p><b>
+          <p>
             Lately, the Scandinavian music industry has been strongly influenced by the influx of US and UK pulp pop which has taken a lot of young artists in a similar, familiar direction. However, the Nordic region has always had its share of original, indepependent musicians. We've been listening here to a lot of the female artists ever since we first heard of Stina Nordenstam back in the mid 90's. 
 
-            We hope you enjoy this brief selection of artists that we are glad to feature in our ever-growing site. You will find a bio-page for each artist, with links to their Spotify and YouTube accounts. Put on your earphones and travel up North with the music. </b>
+            We hope you enjoy this brief selection of artists that we are glad to feature in our ever-growing site. You will find a bio-page for each artist, with links to their Spotify and YouTube accounts. Put on your earphones and travel up North with the music. 
           </p>
-         
-          <p> <h1 class="header1">About<b>Us</b></h1>
-           <b>We started listening to Stina Nordenstam back in the 90's. I suppose the radio-overplay of Abba put us off taking an interest in the region's music but we soon discovered a further wealth of talent in the Nordic Region. We are happy to create this project to share only some of the best names from the region. The site will grow continuously, but we also have an active social media life. We'd be delighted if you would follow our accounts on Facebook and Instagram, the links are in the footer here. </b>
+         </div>
+         <div class="abt-text2">
+           <h1 class="header1">About<b>Us</b></h1>
+           <p>We started listening to Stina Nordenstam back in the 90's. I suppose the radio-overplay of Abba put us off taking an interest in the region's music but we soon discovered a further wealth of talent in the Nordic Region. We are happy to create this project to share only some of the best names from the region. The site will grow continuously, but we also have an active social media life. We'd be delighted if you would follow our accounts on Facebook and Instagram, the links are in the footer here. 
           </p>
+          </div>
         </div>
       </div>
     </div>
