create feverray.html and elperrodelmar.html

--- a/artists.html
+++ b/artists.html
@@ -90,7 +90,7 @@
     <div class="more">
         Wonderfully quirky retro feel mixed with meloncholia. Very cool project from Sarah Assbring and delivers continuously good music. 
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+   <button class="card-btn"> <a href="elperrodelmar.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic3"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/0bnwha8WPTU2sf4Q4P6vE0?si=rpUvL5DCS4ifCoiTsIduWg" target="_blank">Listen On Spotify</a>
@@ -105,7 +105,7 @@
     <div class="more">
         Sharp-edged, provocative electronic music full of sexuality and sensuality, but never predictable. Known for visually stunning concerts.
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+     <button class="card-btn"> <a href="feverray.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic4"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/5hE6NCoobhyEu6TRSbjOJY?si=YlCvJq9gS4OsKzfcC-bV2w" target="_blank">Listen On Spotify</a>
