--- a/feverray.html
+++ b/feverray.html
@@ -51,14 +51,16 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="../assets/img/ane_brun2.png" alt="Ane Brun" />
+            <img src="../assets/img/fever_ray3.png" alt="Fever Ray" />
           </div>
         </div>
 
         <div class="col-12 col-sm-8 intro-text">
-          <h1 class="header1">Ane <b>Brun</b></h1>
+          <h1 class="header1">Fever <b>Ray</b></h1>
           <p>
-            Ane Brun; born Ane Brunvoll on 10 March 1976 in Molde, Norway) is a Norwegian songwriter, guitarist, and vocalist of Sami origin.Since 2003 she has recorded eight albums, six of which are studio albums (including a collection of duets) and one live DVD. She has lived in Stockholm, Sweden, since 2001, where she writes, records, and runs her own label (Balloon Ranger Recordings).Brun featured as one of the guests on Peter Gabriel's 2011 studio album New Blood, singing Kate Bush's part on the re-recorded version of "Don't Give Up", recorded in 2010. She was subsequently invited to perform with him as support act and back-up singer on the New Blood tour throughout 2010.
+            Karin Elisabeth Dreijer (born 7 April 1975) is a Swedish singer-songwriter and record producer. Dreijer was one half of the electronic music duo the Knife, formed with their brother Olof Dreijer. Dreijer released their debut solo album under the alias Fever Ray in January 2009. Their second studio album, Plunge, under the same alias, was released in October 2017.
+
+Dreijer's vocal style is notable for both shrill and deep tones, and also the use of multitracked vocals, with different uses of pitch-shifting technology on each track, creating an intricate and mysterious effect. Visually, they employ the use of masks, face and body paint, intricate costumes, and other theatrical elements in photo shoots, videos and live performances, during which they often perform behind a gauze screen that partially obscures the audience's view.
           </p>
         </div>
       </div>
@@ -70,20 +72,20 @@
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/a-temporary-dive/1444039380"
-                >Ane Brun: A Temporary Dive</a
+              <a href="https://music.apple.com/us/album/fever-ray-deluxe-version/828094246"
+                >Fever Ray: Deluxe Edition</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/after-the-great-storm/1536058335"
-                >Ane Brun: After The Great Storm</a
+                href="https://music.apple.com/us/album/plunge/1299148287"
+                >Fever Ray:  Plunge</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/how-beauty-holds-the-hand-of-sorrow/1540218244"
-                >Ane Brun:: How Beauty Holds the hand of Sorrow
+                href="https://music.apple.com/us/album/when-i-grow-up/828249639"
+                >Fever Ray:  When I grow up
               </a>
             </li>
           </ul>
@@ -101,8 +103,8 @@
             <iframe class="youtube-responsive"
               width="675"
               height="380"
-              src="https://www.youtube.com/embed/KVqu87-amDA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            
+              src="https://www.youtube.com/embed/jWFb5z3kUSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+            ></iframe>
          </div>
          </div>
           </div>
@@ -110,7 +112,7 @@
           <div class="col-12 media-box2">
                  <div class="spotify">
                     <iframe class="spotify-responsive"
-                src="https://open.spotify.com/embed/artist/2L3kwZFd16zjHz9a5kEPAm" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                 src="https://open.spotify.com/embed/artist/5hE6NCoobhyEu6TRSbjOJY" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
          </div>
           </div>
           
@@ -125,20 +127,22 @@
         <div class="col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="https://www.facebook.com/anebrunofficial" target="_blank"
+                <a class="facebook" href="https://www.facebook.com/FeverRay/" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="https://www.imdb.com/name/nm2080795/?ref_=fn_al_nm_1" target="_blank"
-                  ><i class="fab fa-imdb"></i>            
-                  </a>
+                <a class="twitter" href="https://twitter.com/feverray?lang=en" target="_blank"
+                  ><i class="fab fa-twitter-square"></i
+                ></a>
               </li>
               <li>
-                <a class="imdb" href="https://www.youtube.com/channel/UChihnFNbUit9rhVXCNeTsrQ" target="_blank"><i class="fab fa-youtube-square"></i></a>
-              </li>
+                <a class="instagram" href="https://www.youtube.com/channel/UCns4NBJRo7ssh_NeECrSuYw" target="_blank"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+                </li>
               <li>
-                <a class="instagram" href="https://instagram.com/anebrun/" target="_blank"
+                <a class="instagram" href="https://www.instagram.com/feverray/" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
@@ -157,8 +161,8 @@
               <h3>The live schedule is subject to change</h3>
               <span
                 ><a
-                  href="https://www.ticketmaster.ie/ane-brun-tickets/artist/1046986" target="_blank"
-                  >To see if Ane is playing near you soon, check this
+                  href="https://www.ticketmaster.com/fever-ray-tickets/artist/1409214" target="_blank"
+                  >To see if Fever Ray is playing near you soon, check this
                   Ticketmaster link</a
                 ></span
               >
