modify image path, all pages. Create Jennie, Hanne pages

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       <div class="row row-1">
         <div class="col-12 col-lg-5">
           <div class="about-pic">
-            <img src="../assets/img/woman-neon.jpg" alt="Nordic Female Musicians" />
+            <img src="./assets/img/woman-neon.jpg" alt="Nordic Female Musicians" />
           </div>
         </div>
 
