--- a/agnesobel.html
+++ b/agnesobel.html
@@ -51,7 +51,7 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="../assets/img/agnes_obel1a.png" alt="Agnes Obel" />
+            <img src="./assets/img/agnes_obel1a.png" alt="Agnes Obel" />
           </div>
         </div>
 
@@ -96,7 +96,7 @@
           </ul>
             </div>
           <div class="col-12 col-md-4 concert-pic">
-          <img src="../assets/img/records.jpg" alt="latest album releases">
+          <img src="./assets/img/records.jpg" alt="latest album releases">
           </div>
         </div>
         <div class="container media-container">
