--- a/anebrun.html
+++ b/anebrun.html
@@ -51,7 +51,7 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="../assets/img/ane_brun2.png" alt="Ane Brun" />
+            <img src="./assets/img/ane_brun2.png" alt="Ane Brun" />
           </div>
         </div>
 
@@ -89,7 +89,7 @@
           </ul>
             </div>
           <div class="col-12 col-md-4 concert-pic">
-          <img src="../assets/img/records.jpg" alt="latest album releases">
+          <img src="./assets/img/records.jpg" alt="latest album releases">
           </div>
         </div>
         <div class="container media-container">
@@ -149,7 +149,7 @@
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
