--- a/artists.html
+++ b/artists.html
@@ -120,7 +120,7 @@
     <div class="more">
         Confident vocals and well sculpted songs that have various influences from fractured jazz to sprawling cinematic sounds, tinged with sadness. 
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+    <button class="card-btn"> <a href="hannehukkelberg.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic5"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/0pGsKU60aKi7MK8rQENGwZ?si=acj3NyyCSDmZS8zolOVOvg" target="_blank">Listen On Spotify</a>
@@ -135,7 +135,7 @@
     <div class="more">
         A multi-talented, multi-instrumentalist, Jennie is worth listening to, as she sets her standards that much higher. 
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+     <button class="card-btn"> <a href="jennieabrahamson.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic6"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/6Q6y2vf2DZm7yLWHKQr7Bx?si=P5tS69C8QL-JaJgjsRf_xA" target="_blank">Listen On Spotify</a>
