--- a/hannehukkelberg.html
+++ b/hannehukkelberg.html
@@ -51,14 +51,20 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="./assets/img/elperrodelmar2.png" alt="El Perro Del Mar" />
+            <img src="./assets/img/hannehukkelberg2.png" alt="Hanne Hukkelberg" />
           </div>
         </div>
 
         <div class="col-12 col-sm-8 intro-text">
-          <h1 class="header1">El Perro <b>DelMar</b></h1>
+          <h1 class="header1">Hanne <b>Hukkelberg</b></h1>
           <p>
-            El Perro Del Mar (literally "The Dog of the Sea" in Spanish) is a musical project that was founded in December 2003 in Gothenburg, Sweden. The sole member of El Perro Del Mar, Sarah Assbring, initially started as an MP3/CD-R artist and released her first songs through Hybris Records. Her music could originally have been described as melancholic indie pop, but in recent years she is noted for being a "chameleon" with "every visual, sound, costume, and so on painstakenly thought out" for consecutive albums.
+            Hanne Hukkelberg (born 17 April 1979) is a Norwegian singer-songwriter and producer from Kongsberg, Norway.
+
+Hukkelberg started singing and playing instruments at the age of 3. In her youth, she was a vocalist covering genres such as jazz, rock, and free jazz, and was also a member of the influential doom metal band Funeral in high school, in which she contributed vocals on their second album, In Fields of Pestilent Grief. She earned her degree from the Norwegian Academy of Music in Oslo.
+
+Hukkelberg graduated from the Norwegian Academy of Music in 2003, establishing herself as a vocalist, composer and multi-instrumentalist. It was there she met Kåre Chr. Vestrheim – a tutor who would later become one of Hukkelberg's closest friends and collaborators; also producing her Cast Anchor EP (2003) and breakthrough debut LP Little Things (2004).
+
+In 2006 Hukkelberg released her second album Rykestrasse 68. The album was awarded a Norwegian Grammy in 2007 and released to international acclaim, with the likes of Pitchfork, The Guardian and BBC leading press plaudits.
           </p>
         </div>
       </div>
@@ -70,26 +76,26 @@
 
           <ul>
             <li>
-              <a href="https://music.apple.com/us/album/kokoro/1120259121"
-                >El Perro Del Mar : Kokoro</a
+              <a href="https://music.apple.com/us/album/birthmark/1465026547"
+                >Hanne Hukkelberg : BirthMark</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/el-perro-del-mar-deluxe-edition/960508349"
-                >El Perro Del Mar : DeLuxe Edition</a
+                href="https://music.apple.com/us/album/trust/1345701528"
+                >Hanne Hukkelberg : Trust</a
               >
             </li>
             <li>
               <a
-                href="https://music.apple.com/us/album/pale-fire/568238219"
-                >El Perro Del Mar : Pale Fire
+                href="https://music.apple.com/us/album/featherbrain/1345690810"
+                >Hanne Hukkelberg : Featherbrain
               </a>
             </li>
           </ul>
             </div>
           <div class="col-12 col-md-4 concert-pic">
-          <img src="../assets/img/records.jpg" alt="latest album releases">
+          <img src="./assets/img/records.jpg" alt="latest album releases">
           </div>
         </div>
         <div class="container media-container">
@@ -101,7 +107,7 @@
             <iframe class="youtube-responsive"
               width="675"
               height="380"
-              src="https://www.youtube.com/embed/-zBlWBXDnIg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+              src="https://www.youtube.com/embed/DFoSWOS1Qxg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
             ></iframe>
          </div>
          </div>
@@ -110,7 +116,8 @@
           <div class="col-12 media-box2">
                  <div class="spotify">
                     <iframe class="spotify-responsive"
-                src="https://open.spotify.com/embed/artist/0bnwha8WPTU2sf4Q4P6vE0" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                 src="https://open.spotify.com/embed/artist/0pGsKU60aKi7MK8rQENGwZ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+         </div>
           </div>
           
           </div>
@@ -124,22 +131,20 @@
         <div class="col-sm-6 col-xs-12">
             <ul class="social-icons">
               <li>
-                <a class="facebook" href="https://www.facebook.com/ElPerrodelMarOfficial" target="_blank"
+                <a class="facebook" href="https://www.facebook.com/hannehukkelberg" target="_blank"
                   ><i class="fab fa-facebook-square"></i
                 ></a>
               </li>
               <li>
-                <a class="twitter" href="https://twitter.com/" target="_blank"
+                <a class="twitter" href="https://twitter.com/hannehukkelberg" target="_blank"
                   ><i class="fab fa-twitter-square"></i
                 ></a>
               </li>
-             <li>
-                <a class="instagram" href="https://www.youtube.com/channel/UCns4NBJRo7ssh_NeECrSuYw" target="_blank"
-                  ><i class="fab fa-youtube"></i
-                ></a>
+              <li>
+                <a class="imdb" href="https://www.youtube.com/user/huhanneref_=fn_al_nm_1" target="_blank"><i class="fab fa-imdb"></i></a>
               </li>
               <li>
-                <a class="instagram" href="https://www.instagram.com/epdm/?hl=en" target="_blank"
+                <a class="instagram" href="https://www.instagram.com/hannehukkelberg/?hl=en" target="_blank"
                   ><i class="fab fa-instagram-square"></i
                 ></a>
               </li>
@@ -150,7 +155,7 @@
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
@@ -158,12 +163,12 @@
               <h3>The live schedule is subject to change</h3>
               <span
                 ><a
-                  href="https://www.ticketmaster.com/el-perro-del-mar-tickets/artist/1388526" target="_blank"
-                  >To see if El Perro Del Mar is playing near you soon, check this
+                  href="https://www.ticketmaster.com/hanne-hukkelberg-tickets/artist/1399369" target="_blank"
+                  >To see if Hanne is playing near you soon, check this
                   Ticketmaster link</a
                 ></span
               >
-           </div>
+           
           </div>
         </div>
       </div>
