--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="row row-1">
         <div class="col-12 col-md-4">
           <div class="intro-pic">
-            <img src="../assets/img/fever_ray.jpg" alt="Fever Ray" />
+            <img src="./assets/img/fever_ray.jpg" alt="Fever Ray" />
           </div>
         </div>
 
@@ -96,14 +96,14 @@
 
       <div class="col-12 col-md-4">
         <div class="intro-pic">
-          <img src="../assets/img/gig2.jpg" alt="Concert News" />
+          <img src="./assets/img/gig2.jpg" alt="Concert News" />
         </div>
       </div>
     </div>
 
     <div class="row row-1">
       <div class="col-12 col-md-4 intro-pic2">
-        <img src="../assets/img/guitars3.jpg" alt="New Music" />
+        <img src="./assets/img/guitars3.jpg" alt="New Music" />
       </div>
       <div class="col-12 col-md-8 intro-text2">
         <div>
