--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
       <div class="row ">
         <div class="col-12 col-md-4 contact-us">
           <div class="contact-pic">
-            <img src="../assets/img/singout.jpg" alt="Contact Us" />
+            <img src="./assets/img/singout.jpg" alt="Contact Us" />
           </div>
         </div>
       
