--- a/feverray.html
+++ b/feverray.html
@@ -51,7 +51,7 @@
         <div class="row row-1">
         <div class="col-12 col-md-4 artist-ctnr">
           <div class="intro-pic">
-            <img src="../assets/img/fever_ray3.png" alt="Fever Ray" />
+            <img src="./assets/img/fever_ray3.png" alt="Fever Ray" />
           </div>
         </div>
 
@@ -91,7 +91,7 @@ Dreijer's vocal style is notable for both shrill and deep tones, and also the us
           </ul>
             </div>
           <div class="col-12 col-md-4 concert-pic">
-          <img src="../assets/img/records.jpg" alt="latest album releases">
+          <img src="./assets/img/records.jpg" alt="latest album releases">
           </div>
         </div>
         <div class="container media-container">
@@ -153,7 +153,7 @@ Dreijer's vocal style is notable for both shrill and deep tones, and also the us
 
         <div class="row row-1">
           <div class="col-12 col-md-4 concert-pic">
-            <img src="../assets/img/concert.jpg" alt="concert" />
+            <img src="./assets/img/concert.jpg" alt="concert" />
           </div>
           <div class="col-12 col-md-8 intro-text">
             <div>
