create nina page, update links in artist page

--- a/artists.html
+++ b/artists.html
@@ -151,7 +151,7 @@
     <div class="more">
         Indie Pop legend in Sweden with a knack for catchy songs, plays both guitar and piano with a soulful demeanour and great vocals. 
     </div>
-    <button class="card-btn">BIOGRAPHY</button>
+     <button class="card-btn"> <a href="ninakinert.html"> BIOGRAPHY</a></button>
     </div>
     <div class="pic7"></div>
     <div class="sptfy-link"><a href="https://open.spotify.com/artist/6uRl4Lp821EvTTEYmboj8O?si=m0Hxcnt7SPyPcwIRdkVryw" target="_blank">Listen On Spotify</a>
